# stack-trace-time-machine

./: .env.example  .gitignore  DASHBOARD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/demo_repo/: README.md  seed.ps1  seed.sh
scripts/: README.md  build_guide_pdf.py
stt/: __init__.py  bisect.py  cli.py  flaky.py  git_utils.py  github_integration.py  stack_trace.py  storage.py
stt/runners/: __init__.py  base.py  pytest_runner.py
stt/web/: __init__.py  app.py
stt/web/templates/: base.html  dashboard.html  docs.html  test.html
tests/: conftest.py  test_bisect.py  test_flaky.py  test_github_integration.py  test_stack_trace.py  test_storage.py  test_web.py
